# Synq

./: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run_synq.py
cli/: main.py
graph-out/: .graph_labels.json  .graph_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graph-out/cache/: stat-index.json
scratch/: test_forbidden_fix.py  test_llm_connection.py  test_local_llm.py  test_server_e2e.py
scripts/: smoke_structured_output.py
synq/: __init__.py  auth.py  database.py  db_models.py  default_config.py  engine.py  logging_config.py  models.py  server.py
synq/agents/: __init__.py  affinity_agent.py  base.py  campaign_agent.py  compliance_agent.py  insights_agent.py  ranking_agent.py  schemas.py
synq/llm_clients/: bedrock_client.py  openai_client.py
synq/static/: app.js  index.html  style.css
tests/: test_server.py  test_synq.py
